--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ button {
 
 .sign-up-banner button {
     border: 1px solid white;
-    margin-top: 26px;
     align-self: center
 }
 
@@ -40,6 +39,7 @@ button {
     color:#F9FAF8;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 8px;
     gap: 475px;
 }
@@ -60,6 +60,18 @@ button {
     display: flex;
     justify-content: center;
     gap: 50px;
+    padding-top: 50px;
+}
+
+.placeholder-image {
+    background-color: rgb(110,116,124);
+    margin-top: 30px;
+    width: 500px;
+    height: 250px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .top-text { 
@@ -82,28 +94,44 @@ button {
 }
 
 .middle-content {
-    border: 2px solid red;
+    margin: 15px 0 150px 0;
     display: flex;
-    flex: 1.5;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.card-grid {
-    border: 2px solid red;
-    display: flex;
-    gap: 24px;
+.middle-content h1 {
+    margin-bottom: 50px;
 }
 
-.card {
-    border: 2px solid blue;
+.card-grid {
+    display: flex;
+    justify-content: center;
+    width: 1600px;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 48px;
+}
+
+.card,
+.card img {
+    width: 150px;
+    height: 150px;
+    border-radius: 16px;
+    flex-shrink: 0;
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.subtext {
+    margin-top: 8px;
 }
 
 .bottom-content {
     background-color: #E5E7EB;
     display: flex;
-    flex: 0.5;
     justify-content: center;
     align-items: center;
 }
@@ -138,16 +166,13 @@ button {
 .sign-up-banner {
     background-color: #3882F6;
     color: white;
-    padding: 50px;
+    padding: 25px 100px 25px 100px;
     margin: 48px;
-    border-radius: 8px;
-    width: 40%;
-    max-height: 20px;
+    border-radius: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 196px;
-    
 }
 
 .footer {
